# defang-arduino-static

./: .gitignore  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/images/: ui_img_1452681969.c
main/ui/screens/: ui_demoScreen.c  ui_demoScreen10.c  ui_demoScreen11.c  ui_demoScreen2.c  ui_demoScreen3.c  ui_demoScreen4.c  ui_demoScreen5.c  ui_demoScreen6.c  ui_demoScreen7.c  ui_demoScreen8.c  ui_demoScreen9.c  ui_loading.c  ui_mainScreen.c
